fix(trailhead): Fix the vertical alignment on sync selection area
Add a 15px padding to the sync selection area, including both the h2
and the checkbox elements.

fixes #663

--- a/packages/fxa-content-server/app/styles/modules/_branding.scss
+++ b/packages/fxa-content-server/app/styles/modules/_branding.scss
@@ -92,18 +92,13 @@
     form h2 {
       font-size: 18px;
       font-weight: 700;
+      padding: 0 15px;
 
       html[dir='ltr'] & {
         text-align: left;
       }
       html[dir='rtl'] & {
         text-align: right;
-      }
-    }
-
-    .firefox-family-services {
-      @include respond-to('big') {
-        margin-top: 25px;
       }
     }
   }
